--- a/MTournamentsApp/MTournamentsApp/appsettings.json
+++ b/MTournamentsApp/MTournamentsApp/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    // For docker-image DB
+    "TournamentsDB": "Server=localhost;Database=TournamentsDB;Trusted_Connection=False;MultipleActiveResultSets=true;TrustServerCertificate=true;User Id=sa;Password=passw0rd!;"
+
+    // For regular DB
+    //"TournamentsDB": "Server=localhost;Database=TournamentsDB;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  }
 }
