Changed Program.cs and appsettings.json to match DB setup instructions in the README file

--- a/MTournamentsApp/MTournamentsApp/appsettings.json
+++ b/MTournamentsApp/MTournamentsApp/appsettings.json
@@ -8,9 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     // For docker-image DB
-    "TournamentsDB": "Server=localhost;Database=TournamentsDB;Trusted_Connection=False;MultipleActiveResultSets=true;TrustServerCertificate=true;User Id=sa;Password=passw0rd!;"
+    "DockerDB": "Server=localhost;Database=TournamentsDB;Trusted_Connection=False;MultipleActiveResultSets=true;TrustServerCertificate=true;User Id=sa;Password=passw0rd!;",
 
-    // For regular DB
-    //"TournamentsDB": "Server=localhost;Database=TournamentsDB;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    // For local DB3
+    "LocalDB": "Server=localhost;Database=TournamentsDB;Trusted_Connection=True;MultipleActiveResultSets=true;"
   }
 }
