Fix bugs and enhance UI consistency

--- a/MTournamentsApp/MTournamentsApp/appsettings.json
+++ b/MTournamentsApp/MTournamentsApp/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    // For docker-image DB
+    // For docker DB
     "DockerDB": "Server=localhost;Database=TournamentsDB;Trusted_Connection=False;MultipleActiveResultSets=true;TrustServerCertificate=true;User Id=sa;Password=passw0rd!;",
 
-    // For local DB3
-    "LocalDB": "Server=localhost;Database=TournamentsDB;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    // For local DB
+    "LocalDB": "Server=localhost;Database=TournamentsDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   }
 }
